--- a/src/edu/unm/casaa/main/Main.fxml
+++ b/src/edu/unm/casaa/main/Main.fxml
@@ -1,71 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.input.KeyCodeCombination?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
+<VBox stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
   <children>
     <MenuBar id="menuBar" fx:id="menuBar" styleClass="menuBar" VBox.vgrow="NEVER">
       <menus>
-        <Menu text="%menu.title.file">
+        <Menu fx:id="mnuFile" text="%menu.title.file">
           <items>
-            <MenuItem fx:id="mniNew" mnemonicParsing="false" onAction="#playMedia" text="%menu.title.new" />
-            <MenuItem fx:id="mniOpen" mnemonicParsing="false" onAction="#openFile" text="%menu.title.open" />
-            <Menu mnemonicParsing="false" text="Open Recent" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Close" />
-            <MenuItem mnemonicParsing="false" text="Save" />
-            <MenuItem mnemonicParsing="false" text="Save As…" />
-            <MenuItem mnemonicParsing="false" text="Revert" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Preferences…" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem fx:id="mniQuit" onAction="#actQuit" text="%menu.title.quit">
+            <MenuItem fx:id="mniLoad" mnemonicParsing="false" onAction="#mniActOpenFile" text="%menu.title.file.load" />
+            <MenuItem fx:id="mniPrefs" mnemonicParsing="false" text="%menu.title.file.prefs" />
+            <MenuItem fx:id="mniExit" onAction="#mniActExit" text="%menu.title.file.exit">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="X" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator></MenuItem>
           </items>
         </Menu>
-        <Menu mnemonicParsing="false" text="Edit">
+        <Menu fx:id="mnuCodeUterrances" mnemonicParsing="false" text="%menu.title.code">
           <items>
-            <MenuItem mnemonicParsing="false" text="Undo" />
-            <MenuItem mnemonicParsing="false" text="Redo" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Cut" />
-            <MenuItem mnemonicParsing="false" text="Copy" />
-            <MenuItem mnemonicParsing="false" text="Paste" />
-            <MenuItem mnemonicParsing="false" text="Delete" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Select All" />
-            <MenuItem mnemonicParsing="false" text="Unselect All" />
+            <MenuItem fx:id="mniCodeStart" mnemonicParsing="false" text="%menu.title.code.start" />
+            <MenuItem fx:id="mniCodeResume" mnemonicParsing="false" text="%menu.title.code.resume" />
           </items>
         </Menu>
-        <Menu mnemonicParsing="false" text="Help">
+        <Menu fx:id="mnuGlobalRatings" mnemonicParsing="false" text="%menu.title.global.ratings">
           <items>
-            <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
+            <MenuItem fx:id="mniGlobalScore" mnemonicParsing="false" text="%menu.title.global.score" />
           </items>
         </Menu>
+            <Menu mnemonicParsing="false" text="%menu.title.help">
+              <items>
+                <MenuItem fx:id="mniAbout" mnemonicParsing="false" onAction="#mniActAbout" text="%menu.title.help.about" />
+                  <MenuItem fx:id="mniOnlineHelp" mnemonicParsing="false" onAction="#mniActOnlineHelp" text="%menu.title.help.online" />
+              </items>
+            </Menu>
       </menus>
     </MenuBar>
+      <AnchorPane prefHeight="36.0" prefWidth="640.0">
+         <children>
+            <ButtonBar prefHeight="36.0" prefWidth="414.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="226.0" AnchorPane.topAnchor="0.0">
+              <buttons>
+                <Button fx:id="btnPlayPause" mnemonicParsing="false" onAction="#playMedia" text="%btn.playpause" />
+                  <Button fx:id="btnRewind" mnemonicParsing="false" onAction="#btnActRewind" text="%btn.rewind" />
+              </buttons>
+            </ButtonBar>
+         </children>
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin>
+      </AnchorPane>
       <BorderPane prefHeight="62.0" prefWidth="640.0">
          <center>
             <MediaView fx:id="mediaView" fitHeight="10.0" fitWidth="10.0" BorderPane.alignment="CENTER" />
          </center>
          <top>
-            <Slider fx:id="playbackSlider" prefHeight="16.0" prefWidth="543.0" BorderPane.alignment="CENTER" />
+            <Slider fx:id="playbackSlider" prefHeight="16.0" prefWidth="543.0" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets bottom="14.0" left="14.0" right="14.0" top="40.0" />
+               </BorderPane.margin></Slider>
          </top>
-         <left>
-            <Button fx:id="btnPlayer" disable="true" mnemonicParsing="false" onAction="#playerAction" text="&gt;" BorderPane.alignment="CENTER" />
-         </left>
          <right>
             <Label fx:id="lblDuration" text="00:00" BorderPane.alignment="CENTER" />
          </right>
