--- a/src/edu/unm/casaa/main/Main.fxml
+++ b/src/edu/unm/casaa/main/Main.fxml
@@ -49,10 +49,10 @@
     </MenuBar>
       <AnchorPane prefHeight="36.0" prefWidth="640.0">
          <children>
-            <ButtonBar prefHeight="36.0" prefWidth="414.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="226.0" AnchorPane.topAnchor="0.0">
+            <ButtonBar prefHeight="36.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
               <buttons>
-                <Button fx:id="btnPlayPause" mnemonicParsing="false" onAction="#playMedia" text="%btn.playpause" />
-                  <Button fx:id="btnRewind" mnemonicParsing="false" onAction="#btnActRewind" text="%btn.rewind" />
+                <Button fx:id="btnPlayPause" disable="true" mnemonicParsing="false" onAction="#playMedia" text="%btn.playpause" />
+                  <Button fx:id="btnRewind" disable="true" mnemonicParsing="false" onAction="#btnActRewind" text="%btn.rewind" />
               </buttons>
             </ButtonBar>
          </children>
@@ -60,19 +60,20 @@
             <Insets top="20.0" />
          </VBox.margin>
       </AnchorPane>
-      <BorderPane prefHeight="62.0" prefWidth="640.0">
+      <BorderPane>
          <center>
             <MediaView fx:id="mediaView" fitHeight="10.0" fitWidth="10.0" BorderPane.alignment="CENTER" />
          </center>
          <top>
-            <Slider fx:id="playbackSlider" prefHeight="16.0" prefWidth="543.0" BorderPane.alignment="CENTER">
+            <Slider fx:id="playbackSlider" disable="true" prefHeight="16.0" prefWidth="543.0" BorderPane.alignment="CENTER">
                <BorderPane.margin>
                   <Insets bottom="14.0" left="14.0" right="14.0" top="40.0" />
                </BorderPane.margin></Slider>
          </top>
          <right>
-            <Label fx:id="lblDuration" text="00:00" BorderPane.alignment="CENTER" />
+            <Label fx:id="lblDuration" disable="true" text="00:00" BorderPane.alignment="CENTER" />
          </right>
       </BorderPane>
+      <Slider fx:id="sldVolume" majorTickUnit="10" minorTickCount="10" onMouseReleased="#sldActVolume" orientation="VERTICAL" prefHeight="46.0" prefWidth="30.0" showTickMarks="true" value="50.0" />
   </children>
 </VBox>
