--- a/src/edu/unm/casaa/main/Main.fxml
+++ b/src/edu/unm/casaa/main/Main.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
@@ -10,7 +9,6 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
 
@@ -47,33 +45,24 @@
             </Menu>
       </menus>
     </MenuBar>
-      <AnchorPane prefHeight="36.0" prefWidth="640.0">
+      <AnchorPane fx:id="apBtnBar" disable="true" prefHeight="46.0" prefWidth="571.0">
          <children>
-            <ButtonBar prefHeight="36.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
+            <ButtonBar prefHeight="36.0" prefWidth="640.0">
               <buttons>
-                <Button fx:id="btnPlayPause" disable="true" mnemonicParsing="false" onAction="#playMedia" text="%btn.playpause" />
-                  <Button fx:id="btnRewind" disable="true" mnemonicParsing="false" onAction="#btnActRewind" text="%btn.rewind" />
+                <Button fx:id="btnPlayPause" mnemonicParsing="false" onAction="#btnActPlayPause" text="%btn.playpause" />
+                  <Button fx:id="btnRewind" mnemonicParsing="false" onAction="#btnActRewind" text="%btn.rewind" />
               </buttons>
             </ButtonBar>
          </children>
-         <VBox.margin>
-            <Insets top="20.0" />
-         </VBox.margin>
       </AnchorPane>
-      <BorderPane>
-         <center>
-            <MediaView fx:id="mediaView" fitHeight="10.0" fitWidth="10.0" BorderPane.alignment="CENTER" />
-         </center>
-         <top>
-            <Slider fx:id="playbackSlider" disable="true" prefHeight="16.0" prefWidth="543.0" BorderPane.alignment="CENTER">
-               <BorderPane.margin>
-                  <Insets bottom="14.0" left="14.0" right="14.0" top="40.0" />
-               </BorderPane.margin></Slider>
-         </top>
-         <right>
-            <Label fx:id="lblDuration" disable="true" text="00:00" BorderPane.alignment="CENTER" />
-         </right>
-      </BorderPane>
-      <Slider fx:id="sldVolume" majorTickUnit="10" minorTickCount="10" onMouseReleased="#sldActVolume" orientation="VERTICAL" prefHeight="46.0" prefWidth="30.0" showTickMarks="true" value="50.0" />
+      <AnchorPane fx:id="apMediaCtrls" disable="true" prefHeight="84.0" prefWidth="640.0">
+         <children>
+            <Slider fx:id="sldSeek" layoutX="25.0" layoutY="6.0" prefHeight="16.0" prefWidth="549.0" />
+            <Slider fx:id="sldVolume" blockIncrement="0.1" layoutX="574.0" layoutY="4.0" majorTickUnit="10" max="1.0" minorTickCount="10" onMouseReleased="#sldActVolume" orientation="VERTICAL" prefHeight="46.0" prefWidth="30.0" value="0.5" />
+            <Label fx:id="lblDuration" layoutX="529.0" layoutY="19.0" text="00:00" />
+            <MediaView fx:id="mediaView" fitHeight="10.0" fitWidth="10.0" layoutX="9.0" layoutY="9.0" />
+            <Label fx:id="lblVolume" layoutX="596.0" layoutY="18.0" text="" />
+         </children>
+      </AnchorPane>
   </children>
 </VBox>
