--- a/src/edu/unm/casaa/main/Main.css
+++ b/src/edu/unm/casaa/main/Main.css
@@ -1,3 +1,25 @@
 .menuBar {
     -fx-font-size: 12;
 }
+.img-btn-play {
+    -fx-image: url("/media/btn_play.png");
+}
+.img-btn-pause {
+    -fx-image: url("/media/btn_pause.png");
+}
+.img-btn-rew {
+    -fx-image: url("/media/btn_rew.png");
+}
+.img-volume {
+    -fx-image: url("/media/img_volume.png");
+}
+.slider .track {
+    -fx-background-color:rgba(255,0,0,0.3);;
+    -fx-background-insets: 1 0 -1 0, 0, 1;
+    -fx-background-radius: 2.5, 2.5, 1.5;
+    -fx-padding: 0.208333em; /* 2.5 */
+}
+.slider .thumb {
+    -fx-background-color:"green";
+    -fx-background-radius: 2.5, 2.5, 1.5;
+}
