--- a/src/edu/unm/casaa/main/Main.fxml
+++ b/src/edu/unm/casaa/main/Main.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.embed.swing.SwingNode?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
@@ -7,12 +9,17 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
+<?import javafx.scene.text.Font?>
 
-<VBox stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
+<VBox prefHeight="399.0" prefWidth="640.0" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
   <children>
     <MenuBar id="menuBar" fx:id="menuBar" styleClass="menuBar" VBox.vgrow="NEVER">
       <menus>
@@ -28,7 +35,7 @@
         </Menu>
         <Menu fx:id="mnuCodeUterrances" mnemonicParsing="false" text="%menu.title.code">
           <items>
-            <MenuItem fx:id="mniCodeStart" mnemonicParsing="false" text="%menu.title.code.start" />
+            <MenuItem fx:id="mniCodeStart" mnemonicParsing="false" onAction="#mniStartCoding" text="%menu.title.code.start" />
             <MenuItem fx:id="mniCodeResume" mnemonicParsing="false" text="%menu.title.code.resume" />
           </items>
         </Menu>
@@ -47,22 +54,78 @@
     </MenuBar>
       <AnchorPane fx:id="apBtnBar" disable="true" prefHeight="46.0" prefWidth="571.0">
          <children>
-            <ButtonBar prefHeight="36.0" prefWidth="640.0">
+            <ButtonBar buttonMinWidth="50.0" prefHeight="36.0" prefWidth="640.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <buttons>
-                <Button fx:id="btnPlayPause" mnemonicParsing="false" onAction="#btnActPlayPause" text="%btn.playpause" />
-                  <Button fx:id="btnRewind" mnemonicParsing="false" onAction="#btnActRewind" text="%btn.rewind" />
+                <Button fx:id="btnPlayPause" mnemonicParsing="false" onAction="#btnActPlayPause">
+                     <graphic>
+                        <ImageView fx:id="btnPlayImgVw" fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-play" />
+                     </graphic></Button>
+                  <Button fx:id="btnRewind" alignment="CENTER" mnemonicParsing="false" onAction="#btnActRewind" prefHeight="81.0">
+                     <graphic>
+                        <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-rew" />
+                     </graphic></Button>
               </buttons>
+               <padding>
+                  <Insets bottom="4.0" right="8.0" top="4.0" />
+               </padding>
             </ButtonBar>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="apMediaCtrls" disable="true" prefHeight="84.0" prefWidth="640.0">
+      <AnchorPane fx:id="apMediaCtrls" disable="true">
          <children>
-            <Slider fx:id="sldSeek" layoutX="25.0" layoutY="6.0" prefHeight="16.0" prefWidth="549.0" />
-            <Slider fx:id="sldVolume" blockIncrement="0.1" layoutX="574.0" layoutY="4.0" majorTickUnit="10" max="1.0" minorTickCount="10" onMouseReleased="#sldActVolume" orientation="VERTICAL" prefHeight="46.0" prefWidth="30.0" value="0.5" />
-            <Label fx:id="lblDuration" layoutX="529.0" layoutY="19.0" text="00:00" />
-            <MediaView fx:id="mediaView" fitHeight="10.0" fitWidth="10.0" layoutX="9.0" layoutY="9.0" />
-            <Label fx:id="lblVolume" layoutX="596.0" layoutY="18.0" text="" />
+            <GridPane prefHeight="56.0" prefWidth="640.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+                <ColumnConstraints hgrow="ALWAYS" maxWidth="313.0" minWidth="10.0" percentWidth="10.0" prefWidth="45.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints maxHeight="24.0" minHeight="10.0" prefHeight="16.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Slider fx:id="sldSeek" blockIncrement="0.1" max="1.0" onMousePressed="#sldSeekMousePressed" prefHeight="16.0" prefWidth="549.0" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="12.0" />
+                     </GridPane.margin>
+                  </Slider>
+                  <Slider fx:id="sldVolume" blockIncrement="0.1" majorTickUnit="10" max="1.0" minorTickCount="10" orientation="VERTICAL" prefHeight="46.0" prefWidth="30.0" value="0.5" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="24.0" />
+                     </GridPane.margin></Slider>
+                  <Label fx:id="lblTimePos" text="00:00:00" GridPane.columnSpan="2147483647">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label fx:id="lblTimeSep" text="/">
+                     <GridPane.margin>
+                        <Insets left="82.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label fx:id="lblDuration" alignment="BASELINE_CENTER" text="00:00:00">
+                     <GridPane.margin>
+                        <Insets left="94.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <MediaView fx:id="mediaView" fitHeight="10.0" fitWidth="10.0" GridPane.rowIndex="1" />
+                  <Label fx:id="lblVolume" contentDisplay="TOP" text="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                     <graphic>
+                        <ImageView fx:id="imgvwVolume" fitHeight="25.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" styleClass="img-volume" />
+                     </graphic>
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
+               </children>
+            </GridPane>
          </children>
       </AnchorPane>
+      <AnchorPane fx:id="pnCoding" prefHeight="480.0" prefWidth="640.0" styleClass="slider">
+         <children>
+            <SwingNode fx:id="snCoding" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+         </children></AnchorPane>
   </children>
 </VBox>
