--- a/src/edu/unm/casaa/main/Main.fxml
+++ b/src/edu/unm/casaa/main/Main.fxml
@@ -9,17 +9,21 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="399.0" prefWidth="640.0" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1280.0" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.unm.casaa.main.MainController">
   <children>
     <MenuBar id="menuBar" fx:id="menuBar" styleClass="menuBar" VBox.vgrow="NEVER">
       <menus>
@@ -59,11 +63,41 @@
                 <Button fx:id="btnPlayPause" mnemonicParsing="false" onAction="#btnActPlayPause">
                      <graphic>
                         <ImageView fx:id="btnPlayImgVw" fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-play" />
-                     </graphic></Button>
-                  <Button fx:id="btnRewind" alignment="CENTER" mnemonicParsing="false" onAction="#btnActRewind" prefHeight="81.0">
+                     </graphic>
+                     <tooltip>
+                        <Tooltip text="%btn.tt.PlayPause" />
+                     </tooltip></Button>
+                  <Button fx:id="btnReplay" alignment="CENTER" mnemonicParsing="false" onAction="#btnActReplay" prefHeight="81.0">
                      <graphic>
                         <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-rew" />
-                     </graphic></Button>
+                     </graphic>
+                     <tooltip>
+                        <Tooltip text="%btn.tt.Replay" />
+                     </tooltip></Button>
+                  <Button fx:id="btnUncode" alignment="CENTER" layoutX="586.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnActUncode" prefHeight="81.0">
+                     <graphic>
+                        <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-rew" />
+                     </graphic>
+                     <tooltip>
+                        <Tooltip text="%btn.tt.Uncode" />
+                     </tooltip>
+                  </Button>
+                  <Button fx:id="btnUncodeReplay" alignment="CENTER" layoutX="586.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnActUncodeReplay" prefHeight="81.0">
+                     <graphic>
+                        <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-rew" />
+                     </graphic>
+                     <tooltip>
+                        <Tooltip text="%btn.tt.UncodeReplay" />
+                     </tooltip>
+                  </Button>
+                  <Button fx:id="btnRewind" alignment="CENTER" layoutX="586.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnActRewind" prefHeight="81.0">
+                     <graphic>
+                        <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-rew" />
+                     </graphic>
+                     <tooltip>
+                        <Tooltip text="%btn.tt.Rewind" />
+                     </tooltip>
+                  </Button>
               </buttons>
                <padding>
                   <Insets bottom="4.0" right="8.0" top="4.0" />
@@ -122,10 +156,129 @@
                </children>
             </GridPane>
          </children>
+         <padding>
+            <Insets bottom="12.0" />
+         </padding>
       </AnchorPane>
-      <AnchorPane fx:id="pnCoding" prefHeight="480.0" prefWidth="640.0" styleClass="slider">
+      <AnchorPane fx:id="pnCoding" prefHeight="480.0" prefWidth="640.0">
          <children>
-            <SwingNode fx:id="snCoding" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <VBox prefHeight="258.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <TitledPane fx:id="pnlTimeline" animated="false" collapsible="false" prefHeight="90.0" text="%pnl.title.timeline">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <SwingNode fx:id="snCoding" />
+                           </children></AnchorPane>
+                    </content>
+                  </TitledPane>
+                  <HBox alignment="CENTER_LEFT" prefHeight="30.0">
+                     <children>
+                        <Button fx:id="btnStartCoding" mnemonicParsing="false" onAction="#btnActStartCoding" text="%btn.startCoding">
+                           <tooltip>
+                              <Tooltip text="ttBeginCoding" />
+                           </tooltip></Button>
+                        <Label fx:id="lblCurMiscFile" text="/some/file.casaa">
+                           <padding>
+                              <Insets left="12.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <TitledPane fx:id="pnlPrevUtr" animated="false" collapsible="false" prefHeight="60.0" text="%pnl.title.prevUtr">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Label fx:id="lblPrevUtr" prefHeight="48.0" prefWidth="620.0" text="" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </TitledPane>
+                  <TitledPane fx:id="pnlCurUtr" animated="false" collapsible="false" prefHeight="60.0" text="%pnl.title.currUtr">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <HBox alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="620.0" spacing="4.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <Label text="%lbl.enumeration" />
+                                    <Label fx:id="lblCurUtrEnum" text="">
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </Label>
+                                    <Label text="%lbl.miscCode">
+                                       <HBox.margin>
+                                          <Insets left="20.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <Label fx:id="lblCurUtrCode" layoutX="94.0" layoutY="10.0" text="" />
+                                    <Label text="%lbl.miscStartTime">
+                                       <HBox.margin>
+                                          <Insets left="20.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <Label fx:id="lblCurUtrStartTime" text="" />
+                                    <Label text="%lbl.miscEndTime">
+                                       <HBox.margin>
+                                          <Insets left="20.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <Label fx:id="lblCurUtrEndTime" layoutX="94.0" layoutY="10.0" text="" />
+                                 </children>
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets></HBox>
+                           </children>
+                        </AnchorPane>
+                    </content>
+                     <VBox.margin>
+                        <Insets bottom="2.0" />
+                     </VBox.margin>
+                  </TitledPane>
+                  <HBox VBox.vgrow="ALWAYS">
+                     <children>
+                        <TitledPane animated="false" collapsible="false" text="Therapist" HBox.hgrow="ALWAYS">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <TilePane fx:id="pnlCodesTherapist" hgap="2.0" prefColumns="4" prefHeight="180.0" prefTileHeight="10.0" prefTileWidth="60.0" prefWidth="307.0" vgap="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <children>
+                                          <Button mnemonicParsing="false" onAction="#btnActCode" prefWidth="60.0" text="CQ0" />
+                                          <Button mnemonicParsing="false" onAction="#btnActCode" prefWidth="60.0" text="SR" />
+                                       </children>
+                                    </TilePane>
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                           <HBox.margin>
+                              <Insets right="2.0" />
+                           </HBox.margin>
+                        </TitledPane>
+                        <TitledPane animated="false" collapsible="false" text="Client" HBox.hgrow="ALWAYS">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <TilePane fx:id="pnlCodesClient" prefHeight="180.0" prefWidth="307.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                           <HBox.margin>
+                              <Insets left="2.0" />
+                           </HBox.margin>
+                        </TitledPane>
+                     </children>
+                  </HBox>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </VBox>
          </children></AnchorPane>
   </children>
 </VBox>
