Integrating old code; Most MISC functionality implemented.

--- a/src/edu/unm/casaa/main/Main.css
+++ b/src/edu/unm/casaa/main/Main.css
@@ -14,7 +14,7 @@
     -fx-image: url("/media/img_volume.png");
 }
 .slider .track {
-    -fx-background-color:rgba(255,0,0,0.3);;
+    -fx-background-color:rgba(255,0,0,0.3);
     -fx-background-insets: 1 0 -1 0, 0, 1;
     -fx-background-radius: 2.5, 2.5, 1.5;
     -fx-padding: 0.208333em; /* 2.5 */
@@ -22,4 +22,7 @@
 .slider .thumb {
     -fx-background-color:"green";
     -fx-background-radius: 2.5, 2.5, 1.5;
+}
+.btnBarPane {
+    -fx-alignment: center ;
 }
