--- a/src/edu/unm/casaa/main/Main.fxml
+++ b/src/edu/unm/casaa/main/Main.fxml
@@ -56,9 +56,9 @@
             </Menu>
       </menus>
     </MenuBar>
-      <AnchorPane fx:id="apBtnBar" disable="true" prefHeight="46.0" prefWidth="571.0">
+      <AnchorPane fx:id="apBtnBar" disable="true" prefHeight="46.0" prefWidth="571.0" styleClass="btnBarPane">
          <children>
-            <ButtonBar buttonMinWidth="50.0" prefHeight="36.0" prefWidth="640.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <ButtonBar buttonMinWidth="50.0" prefHeight="36.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <buttons>
                 <Button fx:id="btnPlayPause" mnemonicParsing="false" onAction="#btnActPlayPause">
                      <graphic>
@@ -176,9 +176,9 @@
                      <children>
                         <Button fx:id="btnStartCoding" mnemonicParsing="false" onAction="#btnActStartCoding" text="%btn.startCoding">
                            <tooltip>
-                              <Tooltip text="ttBeginCoding" />
+                              <Tooltip text="%btn.tt.startCoding" />
                            </tooltip></Button>
-                        <Label fx:id="lblCurMiscFile" text="/some/file.casaa">
+                        <Label fx:id="lblCurMiscFile" text="">
                            <padding>
                               <Insets left="12.0" />
                            </padding>
