--- a/src/edu/unm/casaa/main/Main.fxml
+++ b/src/edu/unm/casaa/main/Main.fxml
@@ -3,13 +3,13 @@
 <?import javafx.embed.swing.SwingNode?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.input.KeyCodeCombination?>
@@ -17,6 +17,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
@@ -71,8 +72,8 @@
     </MenuBar>
       <AnchorPane fx:id="apBtnBar" disable="true" prefHeight="46.0" prefWidth="571.0" styleClass="btnBarPane">
          <children>
-            <ButtonBar buttonMinWidth="50.0" prefHeight="36.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-              <buttons>
+            <ToolBar fx:id="tbPlayer" minWidth="400.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <items>
                 <Button fx:id="btnPlayPause" mnemonicParsing="false" onAction="#btnActPlayPause">
                      <graphic>
                         <ImageView fx:id="btnPlayImgVw" fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-play" />
@@ -80,22 +81,14 @@
                      <tooltip>
                         <Tooltip text="%btn.tt.PlayPause" />
                      </tooltip></Button>
-                  <Button fx:id="btnRewind" alignment="CENTER" layoutX="586.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnActRewind" prefHeight="81.0">
-                     <graphic>
-                        <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-rew" />
-                     </graphic>
-                     <tooltip>
-                        <Tooltip text="%btn.tt.Rewind" />
-                     </tooltip>
-                  </Button>
-                  <Button fx:id="btnReplay" alignment="CENTER" mnemonicParsing="false" onAction="#btnActReplay" prefHeight="81.0" visible="false">
+                  <Button fx:id="btnReplay" alignment="CENTER" mnemonicParsing="false" onAction="#btnActReplay" visible="false">
                      <graphic>
                         <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-replay" />
                      </graphic>
                      <tooltip>
                         <Tooltip text="%btn.tt.Replay" />
                      </tooltip></Button>
-                  <Button fx:id="btnUncode" alignment="CENTER" layoutX="586.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnActUncode" prefHeight="81.0" visible="false">
+                  <Button fx:id="btnUncode" alignment="CENTER" mnemonicParsing="false" onAction="#btnActUncode" visible="false">
                      <graphic>
                         <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-uncode" />
                      </graphic>
@@ -103,7 +96,7 @@
                         <Tooltip text="%btn.tt.Uncode" />
                      </tooltip>
                   </Button>
-                  <Button fx:id="btnUncodeReplay" alignment="CENTER" layoutX="586.0" layoutY="10.0" mnemonicParsing="false" onAction="#btnActUncodeReplay" prefHeight="81.0" visible="false">
+                  <Button fx:id="btnUncodeReplay" alignment="CENTER" mnemonicParsing="false" onAction="#btnActUncodeReplay" visible="false">
                      <graphic>
                         <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-uncodeReplay" />
                      </graphic>
@@ -111,64 +104,80 @@
                         <Tooltip text="%btn.tt.UncodeReplay" />
                      </tooltip>
                   </Button>
-              </buttons>
-               <padding>
-                  <Insets bottom="4.0" right="372.0" top="4.0" />
-               </padding>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </ButtonBar>
+                  <Button fx:id="btnRewind" alignment="CENTER" mnemonicParsing="false" onAction="#btnActRewind">
+                     <graphic>
+                        <ImageView fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="img-btn-rew" />
+                     </graphic>
+                     <tooltip>
+                        <Tooltip text="%btn.tt.Rewind" />
+                     </tooltip>
+                  </Button>
+               </items>
+            </ToolBar>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="apMediaCtrls" disable="true">
          <children>
-            <GridPane prefHeight="56.0" prefWidth="640.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <GridPane fx:id="gpMediaPlayer" minHeight="58.0" minWidth="400.0" prefHeight="58.0" prefWidth="400.0" styleClass="gp-player" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                <ColumnConstraints hgrow="ALWAYS" maxWidth="313.0" minWidth="10.0" percentWidth="10.0" prefWidth="45.0" />
+                <ColumnConstraints hgrow="ALWAYS" maxWidth="1225.0" minWidth="10.0" prefWidth="1225.0" />
+                <ColumnConstraints hgrow="ALWAYS" />
               </columnConstraints>
               <rowConstraints>
-                  <RowConstraints maxHeight="24.0" minHeight="10.0" prefHeight="16.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="22.0" minHeight="18.0" prefHeight="18.0" valignment="BOTTOM" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="22.0" minHeight="22.0" prefHeight="22.0" valignment="CENTER" vgrow="NEVER" />
+                  <RowConstraints maxHeight="22.0" minHeight="18.0" prefHeight="18.0" valignment="TOP" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Slider fx:id="sldSeek" blockIncrement="0.1" max="1.0" onMousePressed="#sldSeekMousePressed" prefHeight="16.0" prefWidth="549.0" GridPane.rowIndex="1">
+                  <Slider fx:id="sldSeek" blockIncrement="0.1" max="1.0" onMousePressed="#sldSeekMousePressed" prefHeight="9.0" prefWidth="1140.0" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="12.0" />
                      </GridPane.margin>
                   </Slider>
-                  <Slider fx:id="sldVolume" blockIncrement="0.1" majorTickUnit="10" max="1.0" minorTickCount="10" orientation="VERTICAL" prefHeight="46.0" prefWidth="30.0" value="0.5" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets left="24.0" />
-                     </GridPane.margin></Slider>
-                  <Label fx:id="lblTimePos" text="00:00:00" GridPane.columnSpan="2147483647">
-                     <GridPane.margin>
-                        <Insets left="20.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label fx:id="lblTimeSep" text="/">
-                     <GridPane.margin>
-                        <Insets left="82.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label fx:id="lblDuration" alignment="BASELINE_CENTER" text="00:00:00">
-                     <GridPane.margin>
-                        <Insets left="94.0" />
-                     </GridPane.margin>
-                  </Label>
                   <MediaView fx:id="mediaView" fitHeight="10.0" fitWidth="10.0" GridPane.rowIndex="1" />
-                  <Label fx:id="lblVolume" contentDisplay="TOP" text="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Label fx:id="lblAudioFilename" GridPane.rowIndex="2" GridPane.valignment="TOP">
                      <GridPane.margin>
-                        <Insets />
+                        <Insets left="12.0" />
                      </GridPane.margin>
-                     <graphic>
-                        <ImageView fx:id="imgvwVolume" fitHeight="25.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" styleClass="img-volume" />
-                     </graphic>
-                     <font>
-                        <Font size="10.0" />
-                     </font>
                   </Label>
+                  <Pane minHeight="46.0" minWidth="58.0" styleClass="pnVolume" GridPane.columnIndex="1" GridPane.rowSpan="2147483647">
+                     <children>
+                        <Label fx:id="lblVolume" contentDisplay="TOP" text="0.0">
+                           <graphic>
+                              <ImageView fx:id="imgvwVolume" fitHeight="25.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" styleClass="img-volume" />
+                           </graphic>
+                           <font>
+                              <Font size="10.0" />
+                           </font>
+                        </Label>
+                        <Slider fx:id="sldVolume" blockIncrement="0.1" majorTickUnit="10" max="1.0" minorTickCount="10" orientation="VERTICAL" prefHeight="26.0" prefWidth="30.0" value="0.5">
+                           <padding>
+                              <Insets left="36.0" />
+                           </padding>
+                        </Slider>
+                     </children>
+                     <GridPane.margin>
+                        <Insets bottom="2.0" left="2.0" right="4.0" top="2.0" />
+                     </GridPane.margin>
+                  </Pane>
+                  <AnchorPane GridPane.halignment="LEFT" GridPane.hgrow="NEVER" GridPane.valignment="BOTTOM">
+                     <children>
+                        <Label fx:id="lblTimePos" text="00:00:00" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane GridPane.halignment="RIGHT" GridPane.hgrow="NEVER" GridPane.valignment="BOTTOM">
+                     <children>
+                        <Label fx:id="lblDuration" alignment="BASELINE_CENTER" text="00:00:00" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <padding>
+                              <Insets right="6.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                  </AnchorPane>
                </children>
             </GridPane>
          </children>
@@ -176,7 +185,7 @@
             <Insets bottom="12.0" />
          </padding>
       </AnchorPane>
-      <AnchorPane fx:id="pnCoding" visible="false" prefHeight="480.0" prefWidth="640.0">
+      <AnchorPane fx:id="pnCoding" prefHeight="480.0" prefWidth="640.0" visible="false">
          <children>
             <VBox fx:id="vbPnlMiscCoding" prefHeight="258.0" prefWidth="640.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
@@ -268,7 +277,7 @@
                               <Insets right="2.0" />
                            </HBox.margin>
                         </TitledPane>
-                        <TitledPane fx:id="titlePnlCodesRight"  animated="false" collapsible="false" text="" HBox.hgrow="ALWAYS">
+                        <TitledPane fx:id="titlePnlCodesRight" animated="false" collapsible="false" text="" HBox.hgrow="ALWAYS">
                           <content>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
